--- a/src/app/un-bateau/un-bateau.page.html
+++ b/src/app/un-bateau/un-bateau.page.html
@@ -2,8 +2,27 @@
   <ion-toolbar>
     <ion-title>unBateau</ion-title>
   </ion-toolbar>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 </ion-header>
 
 <ion-content>
+  
+  <ion-text color="secondary">
+    <h1 class="t1"> De la brise</h1>
+  </ion-text>
+
+  <ion-img class="img1" src="..\app\old\App_Resources\iOS\deLaBrise@3x.png" alt="un bateau"></ion-img>
+  <h4 class="date1">YYY MM DD</h4>
+  
+  <p class="text1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa 
+    qui officia deserunt mollit anim id est laborum."</p>
+
 
 </ion-content>
