--- a/src/app/un-restaurant/un-restaurant.page.html
+++ b/src/app/un-restaurant/un-restaurant.page.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
 </style>
@@ -5,13 +7,8 @@
 
 <ion-content>
   <ion-header>
-    <ion-toolbar>
-      <ion-title class="titre ion-text-center">
-        Un restaurant
-      </ion-title>
-    </ion-toolbar>
     <div class="ion-text-center poeme-contact">
-      <h1>Restaurant des Gascons</h1>
+      <h1>Nom du restaurant</h1>
     </div>
 
 
@@ -21,7 +18,7 @@
 
   <div class="ion-text-center poeme-contact">
     <ion-text>
-      <h2>1 rue des artistes</h2>
+      <h2>Adresse du restaurant</h2>
     </ion-text>
     <ion-text>
       <li style="list-style-type:none;">Qu’il est chaud le soleil</li>
