--- a/src/app/liste-restaurants/liste-restaurants.page.html
+++ b/src/app/liste-restaurants/liste-restaurants.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <ion-title class="titre ion-text-center">
-    Le bateau thibault
+    restaurants partenaires
   </ion-title>
 
   <ion-text class="titre ion-text-center"  color="secondary">
