Bateaux Partenaires sans les redirections boutons

--- a/src/global.scss
+++ b/src/global.scss
@@ -29,4 +29,6 @@
     color: black;
     font-family: 'Qahiri', sans-serif;
     font-size: 32px;
+    margin-left: auto;
+    margin-right:auto;
 }
