--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -4,18 +4,58 @@
 
 
 <ion-content>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title class="titre ion-text-center">
-        nos bateaux partenaires
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-text class="ion-text-center">
-    <h3>Tous les eaux mènent à Thibault</h3>
-    <p class="ion-margin-top">06.63.99.99.78</p>
-  </ion-text>
+    <ion-grid>
+      <div class="bateaux bateaux-titre ion-text-center">
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col size="8">
+            <h1 class="titre">
+              nos bateaux partenaires
+            </h1>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+      </div>
+      <div class="bateaux bateaux-content">
+        <ion-row class="ion-margin-top">
+          <ion-col></ion-col>
+          <ion-col size="8">
+              <ion-text class="ion-text-center">
+                <h3 class="ion-title-center">Tous les eaux mènent à Thibault</h3>
+                <p class="ion-margin-top">06.63.99.99.78</p>
+              </ion-text>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+      </div>
+      <div class="bateaux bateaux-button ion-text-center">
+        <ion-row class="ion-margin-top">
+          <ion-col></ion-col>
+          <ion-col size="4">
+            <ion-button expand="block">De la Brise</ion-button>
+
+          </ion-col>
+          <ion-col size="4"><ion-button expand="block">Saphir</ion-button>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col size="4">
+            <ion-button expand="block">Gast Micher</ion-button>
+
+          </ion-col>
+          <ion-col size="4"><ion-button expand="block">Aquilor</ion-button>
+          </ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col></ion-col>
+          <ion-col size="8"><ion-button expand="block">CONTACT</ion-button></ion-col>
+          <ion-col></ion-col>
+        </ion-row>
+      </div>
+  </ion-grid>
 
 
   
