--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,20 @@
-#container {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share:ital,wght@1,700&display=swap');
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+@media only screen and (max-width: 600px) {
+  .descriptif-content{
+      margin-top:50%;
+  }
+  .descriptif-button{
+      margin-top:50%;
+  }
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+@media only screen and (min-width: 768px) {
+  .descriptif-content{
+      margin-top:10%;
+      font-family: 'Share', ;
+  }
+  .descriptif-button{
+      margin-top:10%;
+  }
 }
