--- a/src/app/information-contact/information-contact.component.html
+++ b/src/app/information-contact/information-contact.component.html
@@ -1,4 +1,4 @@
   <ion-text color="tertiary" class="ion-text-center">
-    <h3>06.63.99.99.78
-      lebateaudethibault@gmail.com</h3>
+    <h4>06.63.99.99.78</h4>
+    <h4>lebateaudethibault@gmail.com</h4>
   </ion-text>
