Add header component in contact
Ajout d'un composant header dans la page contact grâce à <app-header>

--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,8 +1,4 @@
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
-</style>
-
-
+<app-header></app-header>
 <ion-content>
   <ion-header collapse="condense">
     <ion-toolbar>
