Adding header and information-contact
Ajout du composant header et information-contact dans la page bateaux

--- a/src/app/bateaux/bateaux.page.scss
+++ b/src/app/bateaux/bateaux.page.scss
@@ -1,7 +1,4 @@
-// .bateaux{
-//     display: block;
-// }
-
+@import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
 
 @media only screen and (max-width: 600px) {
     .bateaux-content{
