--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -1,7 +1,4 @@
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
-</style>
-
+<app-header></app-header>
 
 <ion-content>
     <ion-grid>
@@ -21,8 +18,7 @@
           <ion-col></ion-col>
           <ion-col size="8">
               <ion-text class="ion-text-center">
-                <h3 class="ion-title-center">Tous les eaux mènent à Thibault</h3>
-                <p class="ion-margin-top">06.63.99.99.78</p>
+                <app-information-contact></app-information-contact>
               </ion-text>
           </ion-col>
           <ion-col></ion-col>
