--- a/src/app/information-contact/information-contact.component.html
+++ b/src/app/information-contact/information-contact.component.html
@@ -1,4 +1,4 @@
-  <ion-text color="tertiary" class="ion-text-center">
-    <h4>06.63.99.99.78</h4>
-    <h4>lebateaudethibault@gmail.com</h4>
-  </ion-text>
+<ion-text color="black" class="ion-text-center info-contact">
+  <i><h4>06.63.99.99.78</h4>
+  <h4>lebateaudethibault@gmail.com</h4></i>
+</ion-text>
