--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,10 +42,10 @@
     </ion-row>
     <ion-row>
       <ion-col></ion-col>
-      <ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
         <ion-button (click)="onGoToBateaux()" color="dark" expand="block">Bateaux</ion-button>
       </ion-col>
-      <ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">
         <ion-button (click)="onGoToContact()" color="dark" expand="block">Contact</ion-button>
       </ion-col>
       <ion-col></ion-col>
