--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,20 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Share:ital,wght@1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Qahiri&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Share:ital,wght@1,700&display=swap");
 
 @media only screen and (max-width: 600px) {
-  .descriptif-content{
-      margin-top:50%;
+  .descriptif-content {
+    margin-top: 50%;
+    font-family: "Share", cursive;
+    font-weight: bold;
   }
-  .descriptif-button{
-      margin-top:50%;
+  .descriptif-button {
+    margin-top: 50%;
+  }
+
+  .liste-boutons {
+    max-width: 1200px;
+    display: block;
+
   }
 }
+
 @media only screen and (min-width: 768px) {
-  .descriptif-content{
-      margin-top:10%;
-      font-family: 'Share', ;
+  .descriptif-content {
+    margin-top: 10%;
+    font-family: "Share", cursive;
+    font-weight: bold;
+    font-style: italic;
   }
-  .descriptif-button{
-      margin-top:10%;
+  .descriptif-button {
+    margin-top: 10%;
+  }
+
+  .liste-boutons {
+    max-width: 1200px;
+    display: block;
+
   }
 }
