--- a/src/global.scss
+++ b/src/global.scss
@@ -32,6 +32,7 @@
     color: black;
     font-family: 'Qahiri', sans-serif;
     font-size: 42px;
+    margin-top: 50px;
     margin-left: auto;
     margin-right:auto;
 }
