Footer ajouter, Panier ajouter, lien vers laccueil ajouter, liste des produits du fichier json fonctionnel

--- a/src/app/liste-restaurants/liste-restaurants.page.html
+++ b/src/app/liste-restaurants/liste-restaurants.page.html
@@ -1,3 +1,7 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
+</style>
+
 <ion-header>
   <ion-toolbar>
     <ion-title>listeRestaurants</ion-title>
@@ -28,5 +32,5 @@
     <ion-button class="" color="warning">Devenez partenaire!</ion-button>
   </div>
 </div>
-
+<app-footer-menu></app-footer-menu>
 </ion-content>
