--- a/src/global.scss
+++ b/src/global.scss
@@ -45,3 +45,9 @@
     margin-right: auto;
     margin-top: 70px;
 }
+
+.titre-footer-menu{
+        color: black;
+            font-family: 'Qahiri', sans-serif;
+            font-size: 30px;
+}
