Changing Header and Home
Modification du style du composant Header et ajout de la route vers le composant produit-categorie

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Le Bateau de Thibault</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button fill="solid">
+        <ion-icon slot="end" name="home-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title (click)="onGoToHome()">Le Bateau de Thibault</ion-title>
   </ion-toolbar>
 </ion-header>
