--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,72 +1,62 @@
 <app-header></app-header>
 
 <ion-content [fullscreen]="true">
-  <ion-title class="titre ion-text-center"> Le Bateau de Thibault </ion-title>
-
-  <div class="descriptif-content">
-    <ion-row class="ion-margin-top">
-      <ion-col></ion-col>
-      <ion-col size="8">
-        <ion-text class="ion-text-center">
-          <h3 class="ion-title-center">Vente en direct de notre bateau</h3>
-          <h3 class="ion-title-center">Produits selon la saison</h3>
-          <h3 class="ion-title-center">Livraison sur Paris</h3>
-        </ion-text>
-      </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-  </div>
-  <app-information-contact></app-information-contact>
-
-  <div class="liste-boutons ion-text-center">
-    <ion-row class="ion-margin-top">
-      <ion-col></ion-col>
-      <ion-col>
-        <ion-button color="dark" expand="block">
-          <ion-icon slot="start" name="star"></ion-icon>
-          Produits et Promos
-        </ion-button>
-      </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col></ion-col>
-      <ion-col>
-        <ion-button
-          (click)="onGoToListeRestaurants()"
-          color="dark"
-          expand="block"
-          >Restaurants</ion-button
-        >
-      </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col></ion-col>
-      <ion-col>
-        <ion-button (click)="onGoToListeRecettes()" color="dark" expand="block"
-          >Recettes</ion-button
-        >
-      </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-    <ion-grid>
+  <ion-grid>
+    <div class="ion-text-center">
       <ion-row>
         <ion-col></ion-col>
-        <ion-col></ion-col>
-        <ion-col size="2">
-          <ion-button (click)="onGoToBateaux()" color="dark" expand="block"
-            >Bateaux</ion-button
-          >
+        <ion-col size="8">
+          <h1 class="titre">Le Bateau de Thibault</h1>
         </ion-col>
-        <ion-col size="2">
-          <ion-button (click)="onGoToContact()" color="dark" expand="block"
-            >Contact</ion-button
-          >
-        </ion-col>
-        <ion-col></ion-col>
         <ion-col></ion-col>
       </ion-row>
-    </ion-grid>
-  </div>
+    </div>
+    <div class="descriptif-content">
+      <ion-row class="ion-margin-top">
+        <ion-col></ion-col>
+        <ion-col size="8">
+          <ion-text class="ion-text-center">
+            <h3>Vente en direct de notre bateau</h3>
+            <h3>Produits selon la saison</h3>
+            <h3>Livraisons sur Paris</h3>
+          </ion-text>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <app-information-contact></app-information-contact>
+    </div>
+    <div class="ion-text-center">
+      <ion-row class="ion-margin-top">
+        <ion-col></ion-col>
+        <ion-col size="8"
+          ><ion-button (click)="onGoToProduitCategorie()" expand="block">Produits et Promos</ion-button></ion-col
+        >
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="8"
+          ><ion-button (click)="onGoToListeRestaurants()" expand="block">Restaurants</ion-button></ion-col
+        >
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="8"
+          ><ion-button (click)="onGoToListeRecettes()" expand="block">Recettes</ion-button></ion-col
+        >
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="4">
+          <ion-button (click)="onGoToBateaux()" expand="block">Bateaux</ion-button>
+        </ion-col>
+        <ion-col size="4"
+          ><ion-button (click)="onGoToContact()" expand="block">Contact</ion-button>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </div>
+  </ion-grid>
 </ion-content>
