--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="primary">
-      <ion-button fill="solid">
+      <ion-button (click)="onGoToHome()" fill="solid">
         <ion-icon slot="end" name="home-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title (click)="onGoToHome()">Le Bateau de Thibault</ion-title>
+    <ion-title>Le Bateau de Thibault</ion-title>
   </ion-toolbar>
 </ion-header>
