Update liste-recettes et liste-restaurants
Ajout du composant Header dans la vue liste-recettes et liste-restaurants + suppresion du fichier de test liste-restaurants

--- a/src/app/liste-restaurants/liste-restaurants.page.html
+++ b/src/app/liste-restaurants/liste-restaurants.page.html
@@ -1,12 +1,4 @@
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
-</style>
-
-<ion-header>
-  <ion-toolbar>
-    <ion-title>listeRestaurants</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-title class="titre ion-text-center">
