--- a/src/app/liste-recettes/liste-recettes.page.html
+++ b/src/app/liste-recettes/liste-recettes.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>listeRecettes</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-title class="titre ion-text-center">
