fix merge recette page

--- a/src/app/liste-recettes/liste-recettes.page.html
+++ b/src/app/liste-recettes/liste-recettes.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
   <ion-title class="titre ion-text-center">
     Nos recettes
   </ion-title>
@@ -28,5 +29,5 @@
     <ion-button class="" color="warning">Recette y</ion-button>
   </div>
 </div>
-
+</ion-grid>
 </ion-content>
