--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,31 +29,46 @@
       <ion-row class="ion-margin-top">
         <ion-col></ion-col>
         <ion-col size="8"
-          ><ion-button (click)="onGoToProduitCategorie()" expand="block">Produits et Promos</ion-button></ion-col
+          ><ion-button (click)="onGoToProduitCategorie()" expand="block"
+            ><ion-icon slot="start" name="flame-outline"></ion-icon>Produits et
+            Promos</ion-button
+          ></ion-col
         >
         <ion-col></ion-col>
       </ion-row>
       <ion-row>
         <ion-col></ion-col>
         <ion-col size="8"
-          ><ion-button (click)="onGoToListeRestaurants()" expand="block">Restaurants</ion-button></ion-col
+          ><ion-button (click)="onGoToListeRestaurants()" expand="block"
+            ><ion-icon slot="start" name="restaurant-outline"></ion-icon
+            >Restaurants</ion-button
+          ></ion-col
         >
         <ion-col></ion-col>
       </ion-row>
       <ion-row>
         <ion-col></ion-col>
         <ion-col size="8"
-          ><ion-button (click)="onGoToListeRecettes()" expand="block">Recettes</ion-button></ion-col
+          ><ion-button (click)="onGoToListeRecettes()" expand="block"
+            ><ion-icon slot="start" name="fish-outline"></ion-icon
+            >Recettes</ion-button
+          ></ion-col
         >
         <ion-col></ion-col>
       </ion-row>
       <ion-row>
         <ion-col></ion-col>
         <ion-col size="4">
-          <ion-button (click)="onGoToBateaux()" expand="block">Bateaux</ion-button>
+          <ion-button (click)="onGoToBateaux()" expand="block"
+            ><ion-icon slot="start" name="boat-outline"></ion-icon
+            >Bateaux</ion-button
+          >
         </ion-col>
         <ion-col size="4"
-          ><ion-button (click)="onGoToContact()" expand="block">Contact</ion-button>
+          ><ion-button (click)="onGoToContact()" expand="block"
+            ><ion-icon slot="start" name="mail-outline"></ion-icon
+            >Contact</ion-button
+          >
         </ion-col>
         <ion-col></ion-col>
       </ion-row>
