Ajout panier fonctionelle

--- a/src/app/produit-categorie/produit-categorie.page.html
+++ b/src/app/produit-categorie/produit-categorie.page.html
@@ -1,4 +1,4 @@
-<ion-button (click)="test()">Test</ion-button>
+<app-header></app-header>
 <ion-content>
   
     <ion-grid>
@@ -50,4 +50,5 @@
       </div>
   </ion-grid>
 </ion-content>
+
   <!-- <app-footer-menu></app-footer-menu> -->
