Page panier fonctionelle

--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -5,6 +5,6 @@
 </ion-header>
 
 <ion-content>
-  
-<app-footer-menu></app-footer-menu>
+  <ion-button *ngFor="let listePanier of contenuPanier">{{listePanier.name}} {{listePanier.price}}€
+  </ion-button>
 </ion-content>
