--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>panier</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-button *ngFor="let listePanier of contenuPanier">{{listePanier.name}} {{listePanier.price}}€
