--- a/src/app/selection-liste-produits/selection-liste-produits.page.html
+++ b/src/app/selection-liste-produits/selection-liste-produits.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>selection-liste-produits</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-grid>
