--- a/src/app/tab-bar/tab-bar.page.html
+++ b/src/app/tab-bar/tab-bar.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tab-bar</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Accueil</ion-label>
+    </ion-tab-button>
 
-<ion-content>
-
-</ion-content>
+    <ion-tab-button tab="panier">
+      <ion-icon name="basket-outline"></ion-icon>
+      <ion-label>Panier</ion-label>
+      <ion-badge>999</ion-badge>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
