Update HTML and CSS bateaux, home, liste-recettes, liste-restaurants
Modification de la page d'accueil, ajout de CSS et personnalisation des boutons

--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -1,59 +1,55 @@
 <app-header></app-header>
 
 <ion-content>
-    <ion-grid>
-      <div class="bateaux bateaux-titre ion-text-center">
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col size="8">
-            <h1 class="titre">
-              nos bateaux partenaires
-            </h1>
-          </ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-      </div>
-      <div class="bateaux bateaux-content">
-        <ion-row class="ion-margin-top">
-          <ion-col></ion-col>
-          <ion-col size="8">
-              <ion-text class="ion-text-center">
-                <app-information-contact></app-information-contact>
-              </ion-text>
-          </ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-      </div>
-      <div class="bateaux bateaux-button ion-text-center">
-        <ion-row class="ion-margin-top">
-          <ion-col></ion-col>
-          <ion-col size="4">
-            <ion-button expand="block">De la Brise</ion-button>
-
-          </ion-col>
-          <ion-col size="4"><ion-button expand="block">Saphir</ion-button>
-          </ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col size="4">
-            <ion-button expand="block">Gast Micher</ion-button>
-
-          </ion-col>
-          <ion-col size="4"><ion-button expand="block">Aquilor</ion-button>
-          </ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col size="8"><ion-button expand="block">CONTACT</ion-button></ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-      </div>
+  <ion-grid>
+    <div class="bateaux bateaux-titre ion-text-center">
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="8">
+          <h1 class="titre">nos bateaux partenaires</h1>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </div>
+    <div class="bateaux bateaux-content">
+      <ion-row class="ion-margin-top">
+        <ion-col></ion-col>
+        <ion-col size="8">
+          <ion-text class="ion-text-center">
+            <app-information-contact></app-information-contact>
+          </ion-text>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </div>
+    <div class="bateaux bateaux-button ion-text-center">
+      <ion-row class="ion-margin-top">
+        <ion-col></ion-col>
+        <ion-col size="4">
+          <ion-button expand="block">De la Brise</ion-button>
+        </ion-col>
+        <ion-col size="4"
+          ><ion-button expand="block">Saphir</ion-button>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="4">
+          <ion-button expand="block">Gast Micher</ion-button>
+        </ion-col>
+        <ion-col size="4"
+          ><ion-button expand="block">Aquilor</ion-button>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col></ion-col>
+        <ion-col size="8"
+          ><ion-button expand="block">CONTACT</ion-button></ion-col
+        >
+        <ion-col></ion-col>
+      </ion-row>
+    </div>
   </ion-grid>
-
-
-  
-  
 </ion-content>
