--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,7 @@
       <ion-row class="ion-margin-top">
         <ion-col></ion-col>
         <ion-col size="8"
-          ><ion-button (click)="onGoToProduitCategorie()" expand="block"
+          ><ion-button color="danger" (click)="onGoToProduitCategorie()" expand="block"
             ><ion-icon slot="start" name="flame-outline"></ion-icon>Produits et
             Promos</ion-button
           ></ion-col
