--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 <ion-content>
-  <ion-button *ngFor="let listePanier of contenuPanier">{{listePanier.name}} {{listePanier.price}}€
+  <ion-button *ngFor="let listePanier of contenuPanier"
+    >{{listePanier.name}} {{listePanier.price}}€
   </ion-button>
 </ion-content>
