--- a/src/app/un-restaurant/un-restaurant.page.html
+++ b/src/app/un-restaurant/un-restaurant.page.html
@@ -1,41 +1,37 @@
 <app-header></app-header>
 
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Qahiri&display=swap");
 </style>
 
-
 <ion-content>
-  <ion-header>
-    <div class="ion-text-center poeme-contact">
-      <h1>Nom du restaurant</h1>
-    </div>
-
-
-  </ion-header>
-  <img src="../../assets/images/desGascons.png" alt="The Wisconsin State Capitol building in Madison, WI at night"
-    class="image-portrait" />
+  <div class="ion-text-center poeme-contact">
+    <h1 class="titre">{{ titre }}</h1>
+  </div>
+  <img
+    src="../../assets/images/desGascons.png"
+    alt="The Wisconsin State Capitol building in Madison, WI at night"
+    class="image-portrait"
+  />
 
   <div class="ion-text-center poeme-contact">
     <ion-text>
       <h2>Adresse du restaurant</h2>
     </ion-text>
     <ion-text>
-      <li style="list-style-type:none;">Qu’il est chaud le soleil</li>
-      <li style="list-style-type:none;">Quand nous sommes en vacances</li>
-      <li style="list-style-type:none;">Y a d’la joie, des hirondelles</li>
-      <li style="list-style-type:none;">C’est le sud de la France</li>
-      <li style="list-style-type:none;">Papa bricole au garage</li>
-      <li style="list-style-type:none;">Maman lit dans la chaise longue</li>
-      <li style="list-style-type:none;">Dans ce joli paysage</li>
-      <li style="list-style-type:none;">Moi, je me balade en tongs</li>
+      <li style="list-style-type: none">Qu’il est chaud le soleil</li>
+      <li style="list-style-type: none">Quand nous sommes en vacances</li>
+      <li style="list-style-type: none">Y a d’la joie, des hirondelles</li>
+      <li style="list-style-type: none">C’est le sud de la France</li>
+      <li style="list-style-type: none">Papa bricole au garage</li>
+      <li style="list-style-type: none">Maman lit dans la chaise longue</li>
+      <li style="list-style-type: none">Dans ce joli paysage</li>
+      <li style="list-style-type: none">Moi, je me balade en tongs</li>
     </ion-text>
-    <br>
+    <br />
     <ion-text>
-      <li style="list-style-type:none;">Que du bonheur!</li>
-      <li style="list-style-type:none;">Que du bonheur!</li>
+      <li style="list-style-type: none">Que du bonheur!</li>
+      <li style="list-style-type: none">Que du bonheur!</li>
     </ion-text>
   </div>
-
-
 </ion-content>
