--- a/src/app/une-recette/une-recette.page.html
+++ b/src/app/une-recette/une-recette.page.html
@@ -1,13 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Une recette
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
-  <img src="replacewithatruepicture" class="image-recette"/>
+  <div class="titre ion-text-center">
+    <h1>Homard</h1>
+  </div>
+  <img src="../../assets/images/homardRecette.png" class="image-recette"/>
   <div class="ion-text-center text-recette">
     <br>
     <ion-text>
