--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -26,7 +26,7 @@
       <ion-row class="ion-margin-top">
         <ion-col></ion-col>
         <ion-col size="4">
-          <ion-button expand="block">De la Brise</ion-button>
+          <ion-button (click)="onGoToUnBateau()" expand="block">De la Brise</ion-button>
         </ion-col>
         <ion-col size="4"
           ><ion-button expand="block">Saphir</ion-button>
@@ -46,7 +46,7 @@
       <ion-row>
         <ion-col></ion-col>
         <ion-col size="8"
-          ><ion-button expand="block">CONTACT</ion-button></ion-col
+          ><ion-button color="warning" (click)="onGoToContact()" expand="block">CONTACT</ion-button></ion-col
         >
         <ion-col></ion-col>
       </ion-row>
