--- a/src/app/liste-recettes/liste-recettes.page.html
+++ b/src/app/liste-recettes/liste-recettes.page.html
@@ -26,7 +26,7 @@
       <ion-row class="ion-margin-top">
         <ion-col></ion-col>
         <ion-col size="4">
-          <ion-button color="primary" expand="block">Homard</ion-button>
+          <ion-button (click)="onGoToUneRecette()" color="primary" expand="block">Homard</ion-button>
         </ion-col>
         <ion-col size="4"
           ><ion-button color="secondary" expand="block">St-Jacques</ion-button>
