--- a/src/app/liste-restaurants/liste-restaurants.page.html
+++ b/src/app/liste-restaurants/liste-restaurants.page.html
@@ -15,7 +15,7 @@
       <ion-row class="ion-margin-top">
         <ion-col></ion-col>
         <ion-col size="4">
-          <ion-button color="secondary" expand="block"
+          <ion-button (click)="onGoToUnRestaurant()" color="secondary" expand="block"
             >Bistrot des Gascons</ion-button
           >
         </ion-col>
