--- a/src/app/une-recette/une-recette.page.scss
+++ b/src/app/une-recette/une-recette.page.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
+
 .image-recette{
     max-width:100%;
     max-height:100%;
@@ -10,4 +12,7 @@
 .text-recette{
     margin-left: auto;
     margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
+
