Update HTML bateau
Ajout d'une image + modification HTML

--- a/src/app/un-bateau/un-bateau.page.html
+++ b/src/app/un-bateau/un-bateau.page.html
@@ -2,23 +2,21 @@
 
 <ion-content>
   <ion-text color="secondary">
-    <h1 class="t1">De la brise</h1>
+    <h1 class="titre ion-text-center">De la brise</h1>
   </ion-text>
 
-  <ion-img
-    class="img1"
-    src="..\app\old\App_Resources\iOS\deLaBrise@3x.png"
-    alt="un bateau"
-  ></ion-img>
-  <h4 class="date1">YYY MM DD</h4>
-
-  <p class="text1">
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est
-    laborum."
-  </p>
+  <img src="../../assets/images/deLaBrise.png" class="image-bateau" />
+  <div class="ion-text-center text-bateau">
+    <br />
+    <ion-text>
+      <br />
+      <div class="ion-justify-content-center">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur a
+        dolor lacus. Donec mollis vel enim id interdum. In hac habitasse platea
+        dictumst. In metus odio, tempus eu neque id, tempus bibendum nibh.
+        Maecenas ac augue sed quam volutpat bibendum. Sed finibus odio et tempor
+        viverra. Integer tempor faucibus efficitur.
+      </div>
+    </ion-text>
+  </div>
 </ion-content>
