--- a/src/app/un-bateau/un-bateau.page.scss
+++ b/src/app/un-bateau/un-bateau.page.scss
@@ -1,23 +1,17 @@
-.t1{
-    padding-left: 850px;
-    padding-top: 80px;
-    font-family:'Times New Roman', Times, serif;
-    font-size: 60px;
+@import url('https://fonts.googleapis.com/css2?family=Qahiri&display=swap');
+
+.image-bateau{
+    max-width:100%;
+    max-height:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px;
 }
 
-.img1{
-    padding-top: 80px;
-    padding-left: 900px;
-}
-
-.date1{
-    padding-top: 10px;
-    padding-left: 900px;
-}
-
-.text1{
-    padding-top: 40px;
-    padding-left: 500px;
-    padding-right: 500px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.text-bateau{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
